# nonogram_solver

./: .gitignore  CMakeLists.txt  camel.txt  cu_14_14.txt  deer.txt  lady_45_45.txt  main.cpp  readme.md  rose.txt  temp.cpp  whale.txt
.github/workflows/: test.yml
src/: main.cpp
test/: eagle_30_30.txt  face_5_5.txt  seal_25_25.txt  test_nonogram.cpp
